# aws-lambda-post-runner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-upload-release-assets.yml  create-release.yml
examples/: mock-log-processor-README.md  mock-log-processor-checker.rs  mock-log-processor-entry.sh  mock-log-processor.drawio  mock-log-processor.rs  mock-log-processor.yaml
examples/mock-log-processor-extension/: Cargo.toml
examples/mock-log-processor-extension/src/: main.rs
img/: overview.drawio
src/: main.rs
tests/: .gitignore  README.md  samconfig.toml  template.yaml
