[package]
name = "aws-lambda-post-runner"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-lambda-runtime-proxy = "0.2.1"

[dev-dependencies]
posixmq = "1.0.0"
